--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -163,19 +163,35 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Classic99v4.h" />
+    <ClInclude Include="EmulatorSupport\Classic99v4.h" />
+    <ClInclude Include="EmulatorSupport\cpu.h" />
+    <ClInclude Include="EmulatorSupport\peripheral.h" />
+    <ClInclude Include="EmulatorSupport\psg.h" />
+    <ClInclude Include="EmulatorSupport\vdp.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="EmulatorSupport\System.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Classic99v4.cpp" />
+    <ClCompile Include="EmulatorSupport\Classic99v4.cpp" />
+    <ClCompile Include="Systems\Coleco\ColecoVision.cpp" />
+    <ClCompile Include="VDPs\F18A_19.cpp" />
+    <ClCompile Include="Systems\Coleco\Phoenix.cpp" />
+    <ClCompile Include="Systems\TexasInstruments\TI994.cpp" />
+    <ClCompile Include="Systems\TexasInstruments\TI994A.cpp" />
+    <ClCompile Include="Systems\TexasInstruments\TI994A_22.cpp" />
+    <ClCompile Include="VDPs\TMS9918.cpp" />
+    <ClCompile Include="VDPs\TMS9918A.cpp" />
+    <ClCompile Include="VDPs\V9938.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Classic99v4.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Classic99v4.ico" />
-    <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="License.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
