- continue defining system and peripheral classes

--- a/Classic99v4/Classic99v4.vcxproj.filters
+++ b/Classic99v4/Classic99v4.vcxproj.filters
@@ -103,6 +103,12 @@
     <ClCompile Include="VDPs\V9938.cpp">
       <Filter>VDPs</Filter>
     </ClCompile>
+    <ClCompile Include="EmulatorSupport\System.cpp">
+      <Filter>Emulator Support</Filter>
+    </ClCompile>
+    <ClCompile Include="EmulatorSupport\peripheral.cpp">
+      <Filter>Emulator Support</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="License.txt" />
