--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -174,6 +174,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EmulatorSupport\Classic99v4.cpp" />
+    <ClCompile Include="EmulatorSupport\peripheral.cpp" />
+    <ClCompile Include="EmulatorSupport\System.cpp" />
     <ClCompile Include="Systems\Coleco\ColecoVision.cpp" />
     <ClCompile Include="VDPs\F18A_19.cpp" />
     <ClCompile Include="Systems\Coleco\Phoenix.cpp" />
