--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -164,9 +164,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CPUs\tms9900.h" />
+    <ClInclude Include="EmulatorSupport\autobitmap.h" />
+    <ClInclude Include="EmulatorSupport\automutex.h" />
     <ClInclude Include="EmulatorSupport\Classic99v4.h" />
     <ClInclude Include="EmulatorSupport\debuglog.h" />
     <ClInclude Include="EmulatorSupport\peripheral.h" />
+    <ClInclude Include="EmulatorSupport\tv.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="EmulatorSupport\System.h" />
     <ClInclude Include="targetver.h" />
@@ -177,6 +180,14 @@
     <ClCompile Include="EmulatorSupport\debuglog.cpp" />
     <ClCompile Include="EmulatorSupport\peripheral.cpp" />
     <ClCompile Include="EmulatorSupport\System.cpp" />
+    <ClCompile Include="EmulatorSupport\tv.cpp" />
+    <ClCompile Include="Memories\ColecoVisionROM.cpp" />
+    <ClCompile Include="Memories\PhoenixROM.cpp" />
+    <ClCompile Include="Memories\TI994A22GROM.cpp" />
+    <ClCompile Include="Memories\TI994AGROM.cpp" />
+    <ClCompile Include="Memories\TI994AROM.cpp" />
+    <ClCompile Include="Memories\TI994GROM.cpp" />
+    <ClCompile Include="Memories\TI994ROM.cpp" />
     <ClCompile Include="Systems\Coleco\ColecoVision.cpp" />
     <ClCompile Include="VDPs\F18A_19.cpp" />
     <ClCompile Include="Systems\Coleco\Phoenix.cpp" />
