- added const definition lookup tables for later ROM builds

--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -176,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CPUs\tms9900.cpp" />
+    <ClCompile Include="CPUs\tms9900build.cpp" />
     <ClCompile Include="EmulatorSupport\Classic99v4.cpp" />
     <ClCompile Include="EmulatorSupport\debuglog.cpp" />
     <ClCompile Include="EmulatorSupport\peripheral.cpp" />
