--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -171,10 +171,13 @@
     <ClInclude Include="EmulatorSupport\interestingData.h" />
     <ClInclude Include="EmulatorSupport\peripheral.h" />
     <ClInclude Include="EmulatorSupport\tv.h" />
+    <ClInclude Include="Memories\Classic99GROM.h" />
     <ClInclude Include="Memories\TI994GROM.h" />
     <ClInclude Include="Memories\TI994ROM.h" />
+    <ClInclude Include="Memories\TI994Scratchpad.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="EmulatorSupport\System.h" />
+    <ClInclude Include="Systems\TexasInstruments\TI994.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VDPs\TMS9918.h" />
   </ItemGroup>
@@ -187,14 +190,17 @@
     <ClCompile Include="EmulatorSupport\peripheral.cpp" />
     <ClCompile Include="EmulatorSupport\System.cpp" />
     <ClCompile Include="EmulatorSupport\tv.cpp" />
+    <ClCompile Include="Memories\Classic99GROM.cpp" />
     <ClCompile Include="Memories\ColecoVisionROM.cpp" />
     <ClCompile Include="Memories\PhoenixROM.cpp" />
     <ClCompile Include="Memories\TI994A22GROM.cpp" />
     <ClCompile Include="Memories\TI994AGROM.cpp" />
     <ClCompile Include="Memories\TI994AROM.cpp" />
     <ClCompile Include="Memories\TI994GROM.cpp" />
+    <ClCompile Include="Memories\TI994GROMData.cpp" />
     <ClCompile Include="Memories\TI994ROM.cpp" />
     <ClCompile Include="Memories\TI994ROMData.cpp" />
+    <ClCompile Include="Memories\TI994Scratchpad.cpp" />
     <ClCompile Include="Systems\Coleco\ColecoVision.cpp" />
     <ClCompile Include="VDPs\F18A_19.cpp" />
     <ClCompile Include="Systems\Coleco\Phoenix.cpp" />
