--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="EmulatorSupport\interestingData.h" />
     <ClInclude Include="EmulatorSupport\peripheral.h" />
     <ClInclude Include="EmulatorSupport\tv.h" />
+    <ClInclude Include="Keyboard\kb_994.h" />
     <ClInclude Include="Memories\Classic99GROM.h" />
     <ClInclude Include="Memories\TI994GROM.h" />
     <ClInclude Include="Memories\TI994ROM.h" />
@@ -179,7 +180,9 @@
     <ClInclude Include="EmulatorSupport\System.h" />
     <ClInclude Include="Systems\TexasInstruments\TI994.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="VDPs\F18A_19.h" />
     <ClInclude Include="VDPs\TMS9918.h" />
+    <ClInclude Include="VDPs\TMS9918A.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CPUs\tms9900.cpp" />
@@ -190,6 +193,7 @@
     <ClCompile Include="EmulatorSupport\peripheral.cpp" />
     <ClCompile Include="EmulatorSupport\System.cpp" />
     <ClCompile Include="EmulatorSupport\tv.cpp" />
+    <ClCompile Include="Keyboard\kb_994.cpp" />
     <ClCompile Include="Memories\Classic99GROM.cpp" />
     <ClCompile Include="Memories\ColecoVisionROM.cpp" />
     <ClCompile Include="Memories\PhoenixROM.cpp" />
