--- a/Classic99v4/Classic99v4.vcxproj.filters
+++ b/Classic99v4/Classic99v4.vcxproj.filters
@@ -100,6 +100,9 @@
     <ClInclude Include="Keyboard\kb_994.h">
       <Filter>Keyboard</Filter>
     </ClInclude>
+    <ClInclude Include="Keyboard\kb_994A.h">
+      <Filter>Keyboard</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Classic99v4.rc">
@@ -197,6 +200,9 @@
       <Filter>Memories</Filter>
     </ClCompile>
     <ClCompile Include="Keyboard\kb_994.cpp">
+      <Filter>Keyboard</Filter>
+    </ClCompile>
+    <ClCompile Include="Keyboard\kb_994A.cpp">
       <Filter>Keyboard</Filter>
     </ClCompile>
   </ItemGroup>
