--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -174,6 +174,9 @@
     <ClInclude Include="Keyboard\kb_994.h" />
     <ClInclude Include="Keyboard\kb_994A.h" />
     <ClInclude Include="Memories\Classic99GROM.h" />
+    <ClInclude Include="Memories\Classic99ROM.h" />
+    <ClInclude Include="Memories\TI994AGROM.h" />
+    <ClInclude Include="Memories\TI994AROM.h" />
     <ClInclude Include="Memories\TI994GROM.h" />
     <ClInclude Include="Memories\TI994ROM.h" />
     <ClInclude Include="Memories\TI994Scratchpad.h" />
@@ -197,11 +200,15 @@
     <ClCompile Include="Keyboard\kb_994.cpp" />
     <ClCompile Include="Keyboard\kb_994A.cpp" />
     <ClCompile Include="Memories\Classic99GROM.cpp" />
+    <ClCompile Include="Memories\Classic99ROM.cpp" />
     <ClCompile Include="Memories\ColecoVisionROM.cpp" />
     <ClCompile Include="Memories\PhoenixROM.cpp" />
     <ClCompile Include="Memories\TI994A22GROM.cpp" />
+    <ClCompile Include="Memories\TI994A22GROMData.cpp" />
     <ClCompile Include="Memories\TI994AGROM.cpp" />
+    <ClCompile Include="Memories\TI994AGROMData.cpp" />
     <ClCompile Include="Memories\TI994AROM.cpp" />
+    <ClCompile Include="Memories\TI994AROMData.cpp" />
     <ClCompile Include="Memories\TI994GROM.cpp" />
     <ClCompile Include="Memories\TI994GROMData.cpp" />
     <ClCompile Include="Memories\TI994ROM.cpp" />
