--- a/Classic99v4/Classic99v4.vcxproj.filters
+++ b/Classic99v4/Classic99v4.vcxproj.filters
@@ -241,6 +241,9 @@
     <ClCompile Include="Keyboard\TIKeyboard.cpp">
       <Filter>Keyboard</Filter>
     </ClCompile>
+    <ClCompile Include="Memories\Demonstration.cpp">
+      <Filter>Memories</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="License.txt" />
