- building with PDCurses - still need to set up ncurses for other builds - configured raylib and set up quit mechanism

--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="EmulatorSupport\Classic99v4.h" />
     <ClInclude Include="EmulatorSupport\debuglog.h" />
     <ClInclude Include="EmulatorSupport\interestingData.h" />
+    <ClInclude Include="EmulatorSupport\os.h" />
     <ClInclude Include="EmulatorSupport\peripheral.h" />
     <ClInclude Include="EmulatorSupport\speaker.h" />
     <ClInclude Include="EmulatorSupport\tv.h" />
