--- a/Classic99v4/Classic99v4.vcxproj.filters
+++ b/Classic99v4/Classic99v4.vcxproj.filters
@@ -136,6 +136,9 @@
     <ClInclude Include="EmulatorSupport\audioSrc.h">
       <Filter>Emulator Support</Filter>
     </ClInclude>
+    <ClInclude Include="EmulatorSupport\os.h">
+      <Filter>Emulator Support</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Classic99v4.rc">
