--- a/Classic99v4/CMakeLists.txt
+++ b/Classic99v4/CMakeLists.txt
@@ -1,3 +1,6 @@
+# CMakeLists.txt for Classic99
+# Note that we do not need to build PDCurses on non-Windows, we use native ncurses libs
+
 add_subdirectory(Raylib)
 add_subdirectory(CPUs)
 add_subdirectory(EmulatorSupport)
