--- a/Classic99v4/Classic99v4.vcxproj.filters
+++ b/Classic99v4/Classic99v4.vcxproj.filters
@@ -269,6 +269,7 @@
   <ItemGroup>
     <Text Include="License.txt" />
     <Text Include="..\CMakeLists.txt" />
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\readme.md" />
