- add pane for debug disassembly (not implemented) - debuglog.cpp tries to sanity check the provided debug screens (not tested) - remove HIGHDPI from window creation - not needed - fix HIGHDPI scaling in raylib anyway (at least for all monitors have same DPI) - move clearing debug buffer to debuglog.cpp - fix 99/4 keyboard debug (probably)

--- a/Classic99v4/Classic99v4.vcxproj
+++ b/Classic99v4/Classic99v4.vcxproj
@@ -200,6 +200,7 @@
   <ItemGroup>
     <ClCompile Include="CPUs\tms9900.cpp" />
     <ClCompile Include="CPUs\tms9900build.cpp" />
+    <ClCompile Include="EmulatorSupport\9900disasm.cpp" />
     <ClCompile Include="EmulatorSupport\Classic99v4.cpp" />
     <ClCompile Include="EmulatorSupport\debuglog.cpp" />
     <ClCompile Include="EmulatorSupport\interestingData.cpp" />
