--- a/Classic99v4/Classic99v4.vcxproj.filters
+++ b/Classic99v4/Classic99v4.vcxproj.filters
@@ -142,6 +142,9 @@
     <ClInclude Include="EmulatorSupport\9900disasm.h">
       <Filter>Emulator Support</Filter>
     </ClInclude>
+    <ClInclude Include="EmulatorSupport\debugmenu.h">
+      <Filter>Emulator Support</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Classic99v4.rc">
@@ -269,6 +272,9 @@
       <Filter>Emulator Support</Filter>
     </ClCompile>
     <ClCompile Include="EmulatorSupport\9900disasm.cpp">
+      <Filter>Emulator Support</Filter>
+    </ClCompile>
+    <ClCompile Include="EmulatorSupport\debugmenu.cpp">
       <Filter>Emulator Support</Filter>
     </ClCompile>
   </ItemGroup>
