- add debugmenu to the cmakefile - need to support \r and \n for ENTER in the menu, cause Mac

--- a/Classic99v4/EmulatorSupport/CMakeLists.txt
+++ b/Classic99v4/EmulatorSupport/CMakeLists.txt
@@ -9,6 +9,8 @@ target_sources(classic99v4 PUBLIC
     Classic99v4.h
     debuglog.cpp
     debuglog.h
+    debugmenu.cpp
+    debugmenu.h
     interestingData.cpp
     interestingData.h
     peripheral.cpp
